Bug 714265 - Encoding not retained in GatherMimeAttachments - remove obsolete code. r=bienvenu